# ansel

./: .pre-commit-config.yaml  AGENTS.md  README.md  ansel-complete-example.yaml  data.json  flake.nix  justfile  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml  smoke.yml
ansel/: __main__.py  browser.py  cli.py  config.py  diff.py  exceptions.py  github.py  repo.py  template.py  ui.py
ansel/hooks/: __init__.py  builtin.py  manager.py
ansel/patch/: manager.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_6458b20d3d3ad5ff_base_py.html  z_6458b20d3d3ad5ff_regex_py.html  z_6458b20d3d3ad5ff_toml_py.html  z_6458b20d3d3ad5ff_yaml_py.html  z_c0d45f3d00349cbe_manager_py.html  z_c478d9e6470e03ad___init___py.html  z_c478d9e6470e03ad_builtin_py.html  z_c478d9e6470e03ad_manager_py.html  z_c62a7f420b6fa6be___main___py.html  z_c62a7f420b6fa6be_browser_py.html  z_c62a7f420b6fa6be_cli_py.html  z_c62a7f420b6fa6be_config_py.html  z_c62a7f420b6fa6be_diff_py.html  z_c62a7f420b6fa6be_exceptions_py.html  z_c62a7f420b6fa6be_github_py.html  z_c62a7f420b6fa6be_repo_py.html  z_c62a7f420b6fa6be_template_py.html  z_c62a7f420b6fa6be_ui_py.html
tests/: conftest.py  integration_config.yaml  test_browser.py  test_cli.py  test_cli_aliases.py  test_config.py  test_diff.py  test_github.py  test_hooks.py  test_main.py  test_patch.py  test_patch_deletion.py  test_patch_engines.py  test_patch_manager.py  test_patch_structural.py  test_pre_commit.py  test_repo.py  test_resolve.py  test_template.py  test_ui.py  test_version.py  test_yaml_preservation.py
(+4 files in other folders)
